@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- #1542: lack of <table> element in XML file describing a layout
+  doesn't erase the table anymore
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
